Update gradle for faster build times